[package]
name = "game-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.8", features = ["os-poll", "net"] }
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
log = "0.4.0"
parking_lot = "0.12.1"
rand = "0.8"
bit_field = "0.10.2"
strum = "0.25"
strum_macros = "0.25"
anyhow = "1.0.75"
static_init = "1.0.3"